2010-02-24  Kaz Kylheku  <kkylheku@gmail.com>

	* lib.c (init_str): Bugfix: copy only len characters, not len + 1, so
	that we don't clobber the null terminator in the target string, or try
	read past the end of the source data.  This affects the @(freeform)
	directive.

2010-01-26  Kaz Kylheku  <kkylheku@gmail.com>

	Version 033

	Addressed exponential memory behaviors
	in derivative-based regex matching.

	* txr.c (version): Bumped to 033.

	* txr.1: Set version to 033.

	* configure: Bumped txr_ver to 033.

2010-01-26  Kaz Kylheku  <kkylheku@gmail.com>

	hash.c (hash_process_weak): There is no point in fixing up
	the type codes of spuriously reached nodes; reached objects
	will not be removed by weak processing and so it's better
	to just detect those situations and short-circuit.

2010-01-26  Kaz Kylheku  <kkylheku@gmail.com>

	Optimization in derivative-based regex engine.
	Exponential memory consumption behavior was observed when
	matching the input aaaaaa....
	against the regex a?a?a?a?....aaaa....
	The fix is to eliminate common subexpressions
	from the derivative for the or operator.

	* lib.c (memqual, mapcon): New functions

	* lib.h (memqual, mapcon): Declared.

	* regex.c (flatten_or, unflatten_or,
	unique_first, reduce_or): New functions.
	(reg_derivative): Apply reduce_or
	to the constructed disjunction.

2010-01-25  Kaz Kylheku  <kkylheku@gmail.com>

	Fixing weak hash tables.

	* gc.c, gc.h (REACHABLE, FREE): Moved to header.

	* hash.c (hash_mark): Fix broken list push code.
	(has_process_weak): Defend against conservative
	garbage collector. We cannot trust that the
	conses which make up the chain backbone
	and hash entry pairs are unmarked, because the
	hash vectors might be reached through
	spurious references.

2010-01-25  Kaz Kylheku  <kkylheku@gmail.com>

	Version 032

	Fix showstopper stupidity.

	* match.c (match_files): Fix incorrect change involving dataline
	variable made on 2010-01-21; failure to check for end of data.
