@@ -308,6 +308,7 @@ val search_str_tree(val haystack, val tree, val start_num, val from_end);
 val sub_str(val str_in, val from_num, val to_num);
 val cat_str(val list, val sep);
 val split_str(val str, val sep);
+val split_str_set(val str, val set);
 val trim_str(val str);
 val string_lt(val astr, val bstr);
 val chr(wchar_t ch);
